# llm-creativity-learning

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  dataset_stats.json  pyproject.toml  samples.json
data/processed/: combine_datasets.py
data/processed/writing_prompts/: dataset_info.json  state.json
data/raw/fanfiction_prompts/: process.py
data/raw/fanfiction_prompts/data/: prompts_20250205_205051.json  prompts_20250205_205137.json  prompts_20250205_205524.json  prompts_20250205_205647.json  prompts_20250205_210001.json  prompts_20250205_210113.json  prompts_20250205_211226.json  state.json  stats.json
data/raw/reddit_writing_prompts/: process.py
data/raw/reddit_writing_prompts/data/: dataset_info.json  state.json
scripts/: upload_dataset.py
src/: config.py  train.py  utils.py
src/rewards/: antislop.py  content.py  slop_phrase_prob_adjustments.json  structure.py
