[project]
name = "llm-creativity-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.2.0",
    "huggingface-hub>=0.28.1",
    "transformers[torch]>=4.48.2",
    "trl>=0.14.0",
    "unsloth>=2025.1.8",
    "wandb>=0.19.6",
]
