[project]
name = "llm-creativity-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.3.0",
    "bitsandbytes>=0.45.2",
    "datasets>=3.2.0",
    "diffusers>=0.32.2",
    "dspy>=2.6.2",
    "flash-attn>=2.7.4.post1",
    "huggingface-hub>=0.28.1",
    "litellm[proxy]==1.57.4",
    "peft>=0.14.0",
    "pydantic-settings>=2.7.1",
    "transformers[torch]>=4.48.2",
    "trl>=0.14.0",
    "unsloth>=2025.1.8",
    "unsloth-zoo>=2025.1.4",
    "vllm>=0.7.2",
    "wandb>=0.19.6",
]
